# pyRofex-to-Excel

./: .env.example  .gitignore  CONTRIBUTING.md  EPGB OC-DI - Python.xlsb  Makefile  README.md  pyproject.toml  setup.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package-release.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
docs/: FUNCIONALIDADES_NUEVAS.md  INSTALACION_SIN_CLONAR.md  INSTRUMENT_CACHE_PERFORMANCE.md  PUBLICACION_PYPI.md  STRUCTURE_PROPOSAL.md  SYMBOL_DISPLAY_ENHANCEMENT.md  TRADES_SYNC_CONFIGURATION.md
specs/003-trades-sheet-upsert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-trades-sheet-upsert/checklists/: requirements.md
specs/003-trades-sheet-upsert/contracts/: pyrofex-trades-api.md
src/epgb_options/: __main__.py  main.py
src/epgb_options/config/: __init__.py  bootstrap.py  excel_config.py  pyrofex_config.py
src/epgb_options/excel/: sheet_operations.py  symbol_loader.py  workbook_manager.py
src/epgb_options/market_data/: __init__.py  api_client.py  data_processor.py  instrument_cache.py  websocket_handler.py
src/epgb_options/trades/: execution_fetcher.py  trades_processor.py  trades_upsert.py
src/epgb_options/utils/: __init__.py  helpers.py  logging.py  progress_logger.py  validation.py
src/pyRofex_To_Excel/: __init__.py  __main__.py  main.py
src/pyRofex_To_Excel/excel/: __init__.py  (+3 more)
tests/: conftest.py  test_cache_performance.py  test_option_detection.py  test_options_data_handling.py  test_symbol_display.py
tools/: cleanup_duplicates.py  validate_quickstart.py  validate_system.py
(+13 files in other folders)
