[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrofex-to-excel"
version = "1.1.1"
description = "pyRofex-To-Excel - Real-time market data to Excel"
readme = "README.md"
authors = [
    {name = "pyRofex-To-Excel", email = "developer@pyrofex-to-excel.dev"}
]
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "pyRofex>=0.5.0",
    "xlwings>=0.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Entry points for command-line scripts
[project.scripts]
pyrofex-to-excel = "pyRofex_To_Excel.main:main"

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["src"]
